Add 3 metrics : ask, source_selection_time and planning_time